--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-swipeable-views-react-18-fix": "^0.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
